# telemagnifier

./: README.md
agent/linux_agent/: .gitignore  Cargo.toml  README.md
agent/linux_agent/ebpf/: Makefile  reverse_shell_detector.c
agent/linux_agent/src/: main.rs
agent/linux_agent/src/plugins/: reverse_shell.rs
agent/linux_agent/tests/: Dockerfile
agent/linux_agent/tests/docker/: docker-compose.plugin-test.yml  docker-compose.yml
agent/linux_agent/tests/examples/: README.md  basic_usage.rs  container_test.rs  plugin_test.rs  test_scenarios.md
agent/linux_agent/tests/scripts/: run_plugin_test.sh  run_tests.sh  test_reverse_shell_plugin.sh
